gotwebd: fix alternate colors in tree entries
it was broken in 7ecc454 because now we're emitting tags with multiple
`class' attributes (by mistake) and only the first one is used.
However, instead of fixing the HTML `class' attribute, use a CSS
selector to alternate the background colors.

ok tracey@

--- a/gotwebd/files/htdocs/gotwebd/gotweb.css
+++ b/gotwebd/files/htdocs/gotwebd/gotweb.css
@@ -50,13 +50,6 @@ body {
 	color: blue;
 }
 
-.back_white {
-	background-color: #ffffff;
-}
-.back_lightgray {
-	background-color: #d8f3ef;
-}
-
 #logo {
 	height: 50px;
 }
@@ -646,6 +639,10 @@ body {
 	clear: left;
 	float: left;
 	width: 100%;
+	background-color: #d8f3ef;
+}
+.tree_wrapper:nth-child(even) {
+	background-color: #ffffff;
 }
 .tree_line {
 	clear: left;
